# Free-Multi-Agent

./: .env.example  .gitignore  Implementation_plan.md  README.md  SESSION_CHANGES.md  cli.py  conftest.py  mcp_server.py  opencode.json.example  pyproject.toml  requirements.txt  systems.md
agents/: __init__.py  planner.py
cli_app/: __init__.py  __main__.py  agent_chat.py  commands.py  context_tools.py  graph_rag.py  language.py  orchestrate.py  research_constraints.py  session.py  tools.py  tui.py
config/: cli_toolbox.yaml  defaults_model_router.yaml  model_benchmarks.yaml  model_router.yaml
core/: __init__.py  agent_config.py  agent_runtime.py  clients.py  config_editor.py  difficulty_scorer.py  handoff.py  keys.py  model_selector.py  quota_estimate.py  quotas.py  reasoning_params.py  router.py  runs.py  search_guards.py  skills.py  toolbox.py
docs/: handoff_protocol.md  vibe_web_failures.md
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphs/: __init__.py  deep_research_graph.py  vibe_coding_graph.py
schemas/: __init__.py  deep_research.py  handoff.py  requests.py  vibe_coding.py
scratch/: test_cohere.py  test_cohere_rag.py  test_or.py  test_or_http.py
skills/: README.md
tests/: __init__.py  test_cli_app.py  test_entity_focus.py  test_graphs_mocked.py  test_handoff.py  test_model_selector.py  test_planner.py  test_preserve.py  test_quota_estimate.py  test_reasoning_params.py  test_research_constraints.py  test_research_types.py  test_router_fallback.py  test_runtime_and_runs.py  test_schemas.py  test_skills.py  test_source_fetch_and_scrub.py  test_toolbox.py  test_vibe_test_runner.py
(+20 files in other folders)
